err
/Users/artemancikov/Desktop/practical work/try1/reducer/HelloWorld.java:11: error: reached end of file while parsing
    }
     ^
1 error
